src/css/exercises.css
.exercises {
  padding-top: 40px;
  padding-bottom: 40px;
}

.exercises-top {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-bottom: 32px;
}

.exercises-controls {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.exercises-title {
  margin: 0;
  color: var(--color-primary);
  font-size: 32px;
  font-weight: 400;
  line-height: 1.12;
  letter-spacing: -0.02em;
}

.selected-category {
  color: var(--color-primary-light);
  font-size: 20px;
  font-weight: 400;
  line-height: 1.33;
  letter-spacing: -0.02em;
  text-transform: capitalize;
}

.search-form {
  display: flex;
  align-items: center;
  gap: 12px;
}

.search-wrapper {
  position: relative;
  width: 100%;
}

.search-icon-btn,
.close-icon-btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);

  display: flex;
  padding: 0;
  border: none;
  background: none;
  color: var(--color-primary);
  cursor: pointer;

  height: auto;
}

.search-icon-btn {
  right: 14px;
}

.close-icon-btn {
  right: 40px;
  opacity: 0;
  pointer-events: none;
  transition: opacity var(--transition);
}

.close-icon-btn.is-visible {
  opacity: 1;
  pointer-events: auto;
}

.close-icon-btn path {
  stroke: currentColor;
}

.search-form input {
  width: 100%;
  max-width: none;
  height: 44px;
  padding: 0 66px 0 16px;

  border: 1px solid var(--color-primary);
  border-radius: 30px;

  background-color: transparent;
}

.search-form input:focus {
  outline: none;
  box-shadow: 0 0 0 1px var(--color-primary);
}


.filters {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

.filters button {
  position: relative;
  padding: 0;

  border: none;

  background: transparent;
  color: var(--color-primary-light);
  font-size: 14px;
  line-height: 1.43;

  cursor: pointer;
  transition: color var(--transition);
}

.filters button:hover:not(.is-active) {
  color: var(--color-primary);
}

.filters button::after {
  content: '';
  position: absolute;
  bottom: -8px;
  left: 0;
  right: 0;
  height: 4px;
  background-color: var(--color-primary);
  border-radius: 2px;
  transform: scaleX(0);
  transition: transform var(--transition);
}

.filters button.is-active {
  color: var(--color-primary);
}

.filters button.is-active::after {
  transform: scaleX(1);
}

/* CATEGORY CARDS */

[data-categories-list] {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
}

.category-card {
  border-radius: 12px;
  overflow: hidden;
}

.category-card-btn {
  display: block;
  width: 100%;
  padding: 0;
  border: none;
  background: transparent;
  position: relative;
}

.category-card-img {
  width: 100%;
  height: 225px;
  object-fit: cover;
}

.category-card-overlay {
  position: absolute;
  inset: 0;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  background-color: rgba(17, 17, 17, 0.5);
}

.category-card-title {
  font-size: 20px;
  font-weight: 400;
  color: var(--color-background);
  line-height: 1;
  text-transform: capitalize;
}

.category-card-text {
  font-size: 12px;
  font-weight: 400;
  margin-top: 2px;
  line-height: 1.5;
  color: rgba(244, 244, 244, 0.4);
  text-transform: capitalize;
}

/* ======================================================================= */
/* EXERCISE CARDS                                                          */
/* ======================================================================= */

[data-exercises-list] {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
  align-items: stretch;
}

.exercise-card {
  padding: 24px;
  border-radius: 15px;
  background-color: var(--color-white);

  display: flex;
  flex-direction: column;
}

.exercise-card-top {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 33px;
}

.exercise-card-badge-rating {
  display: flex;
  align-items: center;
  gap: 16px;
}

.exercise-card-badge {
  padding: 5px 14px;
  border: 1px solid var(--color-primary);
  border-radius: 15px;

  font-weight: 500;
  font-size: 12px;
  line-height: 1.17;
  text-transform: uppercase;
}

.exercise-card-rating {
  display: flex;
  align-items: center;
  gap: 4px;

  font-size: 14px;
  line-height: 1.29;
}

.star-icon {
  color: #eea10c;
}

.exercise-start-btn {
  display: flex;
  align-items: center;
  gap: 8px;

  padding: 0;
  border: none;

  background: transparent;
  color: var(--color-primary);

  font-weight: 500;
  font-size: 14px;
  line-height: 1.29;

  cursor: pointer;
  transition: transform 0.2s ease;
}

.exercise-start-btn:hover {
  transform: scale(1.05);
}

.arrow-icon {
  stroke: var(--color-primary);
  fill: none;
  stroke-width: 2.6px;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.exercise-card-title-container {
  display: flex;
  align-items: center;
  gap: 16px;

  width: 100%;
  margin-bottom: 16px;

  overflow: hidden;
}

.run-icon-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 35px;
  height: 35px;

  background-color: var(--color-primary);
  border-radius: 50%;
}

.run-icon {
  color: var(--color-white);
}

.exercise-card-title {
  color: var(--color-primary);

  font-weight: 400;
  font-size: 24px;
  line-height: 1.17;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-shrink: 1;
}

.exercise-card-info {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  column-gap: 16px;
  row-gap: 4px;

  list-style: none;
  padding: 0;
  margin: 0;
  margin-top: auto;

  font-size: 12px;
  line-height: 1.5;
  white-space: nowrap;
}

.info-item {
  color: var(--color-primary-extra-light);

  font-weight: 400;
  font-size: 12px;
  line-height: 1.5;

  white-space: nowrap;
}

.exercise-card-info .info-value {
  margin-left: 4px;

  color: var(--color-primary);
  font-weight: 400;
}

/* PAGINATION */

[data-pagination] {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;

  gap: 4px;
  margin-top: 32px;
}

.pagination-btn--nav + .pagination-btn:not(.pagination-btn--nav) {
  margin-left: 16px;
}

.pagination-btn:not(.is-active):not(.pagination-btn--nav)
  + .pagination-btn--nav,
.pagination-ellipsis + .pagination-btn--nav {
  margin-left: 16px;
}

.pagination-btn {
  display: flex;
  align-items: center;
  justify-content: center;

  min-width: 36px;
  height: 36px;
  padding: 0 8px;

  border: 1px solid transparent;
  border-radius: 100px;

  background: transparent;
  cursor: pointer;

  font-weight: 400;
  font-size: 24px;
  line-height: 1.33;
  letter-spacing: 0.04em;

  transition:
    background-color var(--transition),
    color var(--transition),
    border-color var(--transition);
}

.pagination-btn:not(.is-active):not(.pagination-btn--nav) {
  color: var(--color-primary-light);
}

.pagination-btn.is-active {
  border-color: var(--color-primary);
}

.pagination-btn--nav {
  border-color: var(--color-primary);
  color: var(--color-primary);
}

.pagination-btn--nav:disabled {
  border-color: var(--color-border);
  color: var(--color-primary-light);
  cursor: not-allowed;
}

.pagination-btn--nav:hover:not(:disabled) .pagination-icon {
  transform: scale(1.2);
}

.pagination-icon {
  width: 20px;
  height: 20px;
  transition: transform var(--transition);
}

.pagination-ellipsis {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 36px;
  height: 36px;

  color: var(--color-primary-light);
}

/* TABLET */

@media screen and (min-width: 768px) {
  .exercises-controls {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .search-form {
    max-width: 273px;
    width: 100%;
  }

  [data-categories-list] {
    grid-template-columns: repeat(3, 1fr);
    gap: 32px 15px;
  }

  .category-card-title {
    font-size: 24px;
    text-align: center;
    white-space: normal;
    box-sizing: border-box;
    width: 100%;
  }

  .category-card-img {
    height: 225px;
  }

  [data-exercises-list] {
    grid-template-columns: repeat(2, 1fr);
  }

  .filters button {
    font-size: 16px;
    line-height: 1.5;
  }
}

/* DESKTOP */

@media screen and (min-width: 1440px) {
  .exercises-title {
    font-size: 44px;
    line-height: 1.09;
  }

  .exercises-top {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .exercises-controls {
    flex: 1;
    justify-content: flex-end;
    max-width: 600px;
  }

  .filters {
    flex-wrap: nowrap;
  }

  .selected-category {
    font-size: 24px;
    line-height: 1.33;
  }

  .category-card-img {
    height: 242px;
  }

  [data-exercises-list] {
    grid-template-columns: repeat(2, 1fr);
  }
}

